# rust-f7-example

./: .gdbinit  Cargo.toml  README.md  Xargo.toml  gdbinit  memory.x  openocd.cfg
examples/: hello.rs
src/: main (copie).rs  main.rs  main.rs - copie
