[package]
authors = ["David Karwowski <karwowski.david@gmail.com>"]
name = "blinkyf7"
version = "0.1.0"

[dependencies]
cortex-m = "0.4.0"
cortex-m-semihosting = "0.2.0"
embedded-hal = "0.1.0"
cortex-m-rtfm = "0.3.1"
nb = "0.1.0"

[dev-dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.12"

[dependencies.stm32f7x]
path = "../lib/stm32f7x"
features = ["rt"]

[dependencies.stm32f7x-hal]
path = "../lib/stm32f7x-hal"
features = ["rt"]

[features]
rt = ["stm32f7x-hal/rt"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
debug = true
lto = true

