[package]
authors = ["David Karwowski <karwowski.david@gmail.com>"]
name = "blinkyf7"
version = "0.1.0"

[dependencies]
cortex-m = "0.4.3"
cortex-m-rtfm = "0.3.1"
cortex-m-semihosting = "0.2.0"
embedded-hal = "0.1.2"

[dependencies.stm32f7x]
branch = "0.2.0-New-IO"
features = ["rt"]
git = "https://github.com/musitdev/stm32f7x"

[dependencies.stm32f7x-hal]
branch = "0.2.0-New-IO"
features = ["rt"]
git = "https://github.com/musitdev/stm32f7x-hal"
[dev-dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.13"

[dev-dependencies.nb]
features = ["unstable"]
version = "0.1.1"

[features]
rt = ["stm32f7x-hal/rt"]
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
