[package]
authors = ["musitdev <philippe.delrieu@free.fr>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Example for STM32F7xx Hal"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/musitdev/stm32f7x-hal"
name = "stm32f7x-hal-example"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.0"
cortex-m-rt = "0.5.0"
cortex-m-semihosting = "0.3.0"
panic-semihosting = "0.2.0"

[dependencies.stm32f4]
version = "0.1.1"
features = ["stm32f405", "rt"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
